# cookbook_ocr

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  ocr_handler.cpp  ocr_handler.h
